[package]
name = "re_rocket"
version = "0.1.0"
edition = "2021"

[dependencies]
quote = "1.0.36"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = { version = "1.0", features = ["arbitrary_precision"] }
rocket = { version = "0.5.1", features = ["json", "uuid"] }
syn = {version = "2.0.66", features = [ "full" ]}
proc-macro2 = "1.0.85"

[lib]
proc-macro = true
